# unreal-mobile-notification

./: README.md
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/jni/: CMakeLists.txt
android/app/src/main/jni/include/: Logger.h  TypeConverter.h  UnrealNotifications.h
android/app/src/main/jni/src/: TypeConverter.cpp  UnrealNotifications.cpp
android/app/src/ueV4/: AndroidManifest.xml
android/app/src/ueV5/: AndroidManifest.xml
android/gradle/wrapper/: gradle-wrapper.properties
demo/: .gitignore  Demo.uproject
demo/Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
demo/Content/Maps/: MainMap.umap
demo/Content/Materials/: RoundedCornerMaterial.uasset  SquareCornerMaterial.uasset
demo/Content/Textures/: Device.uasset  Email.uasset  Message.uasset  firebase.uasset  ios.uasset
demo/Content/Widgets/: BP_MainWidget.uasset
demo/Plugins/MobileNotification/: .gitignore  MobileNotification.uplugin
demo/Source/: Demo.Target.cs  DemoEditor.Target.cs
demo/Source/Demo/: Demo.Build.cs  Demo.upl.xml
demo/Source/Demo/Private/: DemoGameMode.cpp  DemoUtils.cpp  MainWidget.cpp  (+1 more)
document/: FirebaseCloudMessaging.md  FirebasePlugin.md
ios/: .gitignore  Podfile  README.md
ios/example/: Info.plist  main.m
ios/example.xcodeproj/: project.pbxproj
ios/example/Controller/: ViewController.h  ViewController.m
ios/example/Delegate/: AppDelegate.m  SceneDelegate.m
ios/example/MobileNotification/: MNAppDelegate.h  MNAppDelegate.m  MNPlugin.h  MNPlugin.m
(+48 files in other folders)
